src/app/features/planet-overview/planet-overview.scss
:host {
  --px: 2.4rem;
  --pb: 4.7rem;
  padding: 0 var(--px) var(--pb);

  height: 100%;

  display: grid;
  gap: 2.8rem;

  overflow-x: hidden;

  @media (min-width: 768px) {
    --px: 3.9rem;
    --pb: 3.6rem;
  }

  // Desktop View

  @media (min-width: 1440px) {
    --px: 16.5rem;
    --py: 5.6rem;
  }
}

.grid {
  display: grid;
  grid-template-columns: 1fr;
  align-items: center;

  @media (min-width: 1440px) {
    grid-template-columns: 1fr 35rem;
  }
}

// Mobile Panel Start

.mobile-panel {
  height: 5rem;
  display: flex;
  justify-content: space-between;

  position: relative;
  z-index: 1;

  @media (min-width: 768px) {
    display: none;
  }

  &::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%) scaleX(2);
    width: 100%;
    height: 1px;
    background-color: rgba(255, 255, 255, 0.2);
  }

  button {
    border: unset;
    background-color: transparent;
    width: min-content;

    font-size: 0.9rem;
    font-weight: bold;
    letter-spacing: 1.93px;
    color: var(--white-05);

    position: relative;
    cursor: pointer;

    transition:
      color 0.2s,
      outline 0.2s;

    &:hover {
      color: var(--white);
    }

    &:focus-visible {
      outline: 2px solid var(--selected-planet);
      outline-offset: 4px;
      color: var(--white);
    }

    &::after {
      content: '';
      height: 0px;
      background-color: var(--selected-planet);
      width: 100%;

      position: absolute;
      bottom: 0;
      left: 0;

      transition:
        background-color 0.2s,
        height 0.2s;
    }

    &.selected {
      color: var(--white);

      &::after {
        height: 4px;
      }
    }
  }
}

// Mobile Panel End

// Planet Image Start

.planet-img {
  padding-block: 2.4rem;
  height: 30.4rem;

  position: relative;

  @media (min-width: 768px) {
    padding-block: 6rem;
    height: 46rem;
  }

  @media (min-width: 1440px) {
    height: 68rem;
    padding-block: 7rem;
  }
}

.main-img {
  width: 100%;
  height: 100%;
  object-fit: contain;

  &.mercury {
    transform: scale(0.44);
  }

  &.venus {
    transform: scale(0.57);
  }

  &.earth {
    transform: scale(0.6);
  }

  &.mars {
    transform: scale(0.5);
  }

  &.saturn {
    transform: scale(1);
  }

  &.jupiter {
    transform: scale(0.96);
  }

  &.uranus {
    transform: scale(0.9);
  }

  &.neptune {
    transform: scale(0.88);
  }
}

.surface-img {
  position: absolute;

  top: 50%;
  left: 50%;
  transform: translate(-50%, 35%);

  width: 10rem;
  height: auto;

  @media (min-width: 768px) {
    width: 13rem;
  }

  @media (min-width: 1440px) {
    width: 16.1rem;
  }
}

// Planet Image End

.planet-info {
  display: grid;
  grid-template-columns: 1fr;
  gap: 6.9rem;

  height: min-content;

  align-items: center;

  @media (min-width: 768px) {
    grid-template-columns: 6fr 4fr;
  }

  @media (min-width: 1440px) {
    grid-template-columns: 1fr;
    gap: 3.9rem;
  }
}

// Content Start

.content {
  text-align: center;
  color: var(--white);

  display: flex;
  align-items: center;
  flex-direction: column;

  @media (min-width: 768px) {
    text-align: start;
    align-items: start;
  }
}

h1 {
  font-size: 4rem;
  font-weight: 500;
  text-transform: uppercase;
  font-family: var(--heading-font);

  @media (min-width: 768px) {
    font-size: 4.8rem;
  }

  @media (min-width: 1440px) {
    font-size: 8rem;
  }
}

.overview {
  font-size: 1.1rem;
  line-height: 2;

  margin-block: 1.6rem 3.2rem;

  max-width: 46rem;

  @media (min-width: 768px) {
    margin-block: 2.4rem 3.2rem;
    max-width: 50rem;
  }

  @media (min-width: 1440px) {
    font-size: 1.4rem;
    line-height: 1.79;

    margin-block: 2.3rem;
  }
}

.source {
  color: var(--white-05);
  font-size: 1.2rem;
  line-height: 2.08;

  a {
    img {
      vertical-align: middle;
      margin-left: 4px;
    }

    color: var(--white-05);
    font-weight: bold;

    transition:
      outline 0.2s,
      color 0.2s;

    &:hover {
      color: var(--white);
    }

    &:focus-visible {
      outline: 2px solid var(--selected-planet);
      outline-offset: 2px;
      color: var(--white);
    }
  }

  @media (min-width: 1440px) {
    font-size: 1.4rem;
  }
}

// Content End

// Tabs Start

.tabs {
  display: none;
  list-style: none;

  @media (min-width: 768px) {
    display: block;
  }
}

.section-selector {
  height: 4rem;

  button {
    border: 1px solid rgba(255, 255, 255, 0.2);
    background-color: transparent;
    color: var(--white);
    padding-inline: 2rem;
    text-align: start;
    width: 100%;
    height: 100%;

    font-size: 0.9rem;
    font-weight: bold;
    line-height: 2.78;
    letter-spacing: 1.93px;

    display: flex;
    align-items: center;
    gap: 1.7rem;

    cursor: pointer;

    transition:
      outline 0.2s,
      background-color 0.2s,
      border-color 0.2s;

    span {
      opacity: 0.5;
    }

    &.selected {
      background-color: var(--selected-planet);
      border-color: var(--selected-planet);

      span {
        opacity: 1;
      }
    }

    &:not(.selected):hover {
      background-color: rgba(216, 216, 216, 0.2);
    }

    &:focus-visible {
      outline: 2px solid var(--selected-planet);
      outline-offset: 4px;
    }
  }

  &:nth-child(2) {
    margin-block: 1.6rem;
  }

  @media (min-width: 1440px) {
    height: 4.8rem;

    button {
      font-size: 1.2rem;
    }
  }
}

// Tabs End

// Info Bock Start

.info-block {
  display: grid;
  grid-template-columns: 1fr;
  gap: 0.8rem;

  @media (min-width: 768px) {
    grid-template-columns: repeat(4, 1fr);
    gap: 1.1rem;
  }

  @media (min-width: 1440px) {
    gap: 3rem;
  }
}

.block {
  border: 1px solid rgba(255, 255, 255, 0.2);

  display: flex;
  justify-content: space-between;
  align-items: center;

  text-transform: uppercase;
  color: var(--white);

  height: 4.8rem;

  padding-inline: 2.4rem;

  @media (min-width: 768px) {
    height: 8.8rem;
    flex-direction: column;
    justify-content: center;
    align-items: start;

    padding: 0 1.5rem;

    gap: 0.8rem;
  }

  @media (min-width: 1440px) {
    padding: 2rem 2.3rem 2.7rem;
    gap: 0.5rem;

    height: 12.8rem;
  }
}

.block-title {
  font-size: 0.8rem;
  font-weight: bold;
  line-height: 2;
  letter-spacing: 0.73px;
  text-align: left;
  color: var(--white-05);

  @media (min-width: 1440px) {
    font-size: 1.1rem;
  }
}

.block-value {
  font-family: var(--heading-font);
  font-size: 2rem;
  font-weight: 500;
  letter-spacing: -0.75px;

  @media (min-width: 768px) {
    font-size: 2.4rem;
  }

  @media (min-width: 1440px) {
    font-size: 4rem;
  }
}

// Info Bock End

